--- a/notes/linear-algebra/affine-transformations.html
+++ b/notes/linear-algebra/affine-transformations.html
@@ -705,7 +705,7 @@ function plotAxesInfo() {
           starting with a square or any other closed figure can still lead to the same limiting fractal. This
           illustrates
           the robustness of the process with respect to the choice of initial shape. In his work on
-          <em>V-variable fractals and superfractals</em>, Michael Barnsley, et al. \cite{barnsley-2003} famously
+          <em>V-variable fractals and superfractals</em>, Michael Barnsley, et al. (2003) famously
           demonstrated this flexibility using the image of a fish as the initial figure.
         </p>
 
@@ -975,9 +975,10 @@ function drawPoint() {
           construct these are listed in Tables \ref{tab:tree} and \ref{tab:triangle}.
         </p>
 
+
         <div class="scroll-wrapper">
 
-          <table border="1" style="margin: 0 auto; border-collapse: collapse;">
+          <table border="1" style="margin: 0 auto; border-collapse: collapse;margin-top: 15px;">
             <caption><strong>IFS code for a fractal tree.</strong></caption>
             <thead>
               <tr>
@@ -1036,11 +1037,11 @@ function drawPoint() {
           </table>
         </div>
 
-        <br />
+      
 
         <div class="scroll-wrapper">
 
-          <table border="1" style="margin: 0 auto; border-collapse: collapse;">
+          <table border="1" style="margin: 0 auto; border-collapse: collapse; margin-top: 15px;">
             <caption style="width:22em"><strong>IFS code for a Sierpiński triangle.</strong></caption>
             <thead>
               <tr>
@@ -1095,8 +1096,8 @@ function drawPoint() {
 
 
         <p>
-          You can explore the online-interactive implementations
-          of the probabilistic IFS in the following links:
+          Explore the online-interactive implementations
+          of the probabilistic IFS:
         </p>
 
         <ul>
