--- a/notes/linear-algebra/affine-transformations.html
+++ b/notes/linear-algebra/affine-transformations.html
@@ -794,11 +794,11 @@ function plotAxesInfo() {
           Each transformation is associated with a probability, as shown below:
         </p>
 
-        <table border="1" style="margin: 0 auto; border-collapse: collapse; text-align: center;">
+        <table style="margin: 0 auto; border-collapse: collapse; text-align: center;">
           <thead>
             <tr>
-              <th></th>
-              <th><strong>Probability</strong></th>
+              <th scope="col"></th>
+              <th scope="col"><strong>Probability</strong></th>
             </tr>
           </thead>
           <tbody>
@@ -830,18 +830,18 @@ function plotAxesInfo() {
         </p>
 
         <div class="scroll-wrapper">
-          <table border="1" style="margin: 0 auto; border-collapse: collapse; text-align: center;">
+          <table style="margin: 0 auto; border-collapse: collapse; text-align: center;">
 
             <thead>
-              <tr style="text-align: center;">
-                <th style="text-align: center;"><em>T</em></th>
-                <th style="text-align: center;"><em>a</em></th>
-                <th style="text-align: center;"><em>b</em></th>
-                <th style="text-align: center;"><em>c</em></th>
-                <th style="text-align: center;"><em>d</em></th>
-                <th style="text-align: center;"><em>e</em></th>
-                <th style="text-align: center;"><em>f</em></th>
-                <th style="text-align: center;"><em>p</em></th>
+              <tr>
+                <th  scope="col"><em>T</em></th>
+                <th  scope="col"><em>a</em></th>
+                <th  scope="col"><em>b</em></th>
+                <th  scope="col"><em>c</em></th>
+                <th  scope="col"><em>d</em></th>
+                <th  scope="col"><em>e</em></th>
+                <th  scope="col"><em>f</em></th>
+                <th  scope="col"><em>p</em></th>
               </tr>
             </thead>
             <tbody>
