--- a/notes/linear-algebra/affine-transformations.html
+++ b/notes/linear-algebra/affine-transformations.html
@@ -978,18 +978,18 @@ function drawPoint() {
 
         <div class="scroll-wrapper">
 
-          <table border="1" style="margin: 0 auto; border-collapse: collapse;margin-top: 15px;">
+          <table style="margin: 0 auto; border-collapse: collapse;margin-top: 15px;">
             <caption><strong>IFS code for a fractal tree.</strong></caption>
             <thead>
               <tr>
-                <th style="text-align: center;"><em>T</em></th>
-                <th style="text-align: center;"><em>a</em></th>
-                <th style="text-align: center;"><em>b</em></th>
-                <th style="text-align: center;"><em>c</em></th>
-                <th style="text-align: center;"><em>d</em></th>
-                <th style="text-align: center;"><em>e</em></th>
-                <th style="text-align: center;"><em>f</em></th>
-                <th style="text-align: center;"><em>p</em></th>
+                <th scope="col"><em>T</em></th>
+                <th scope="col"><em>a</em></th>
+                <th scope="col"><em>b</em></th>
+                <th scope="col"><em>c</em></th>
+                <th scope="col"><em>d</em></th>
+                <th scope="col"><em>e</em></th>
+                <th scope="col"><em>f</em></th>
+                <th scope="col"><em>p</em></th>
               </tr>
             </thead>
             <tbody>
@@ -1041,18 +1041,18 @@ function drawPoint() {
 
         <div class="scroll-wrapper">
 
-          <table border="1" style="margin: 0 auto; border-collapse: collapse; margin-top: 15px;">
+          <table style="margin: 0 auto; border-collapse: collapse; margin-top: 15px;">
             <caption style="width:22em"><strong>IFS code for a Sierpiński triangle.</strong></caption>
             <thead>
               <tr>
-                <th style="text-align: center;"><em>T</em></th>
-                <th style="text-align: center;"><em>a</em></th>
-                <th style="text-align: center;"><em>b</em></th>
-                <th style="text-align: center;"><em>c</em></th>
-                <th style="text-align: center;"><em>d</em></th>
-                <th style="text-align: center;"><em>e</em></th>
-                <th style="text-align: center;"><em>f</em></th>
-                <th style="text-align: center;"><em>p</em></th>
+                <th scope="col"><em>T</em></th>
+                <th scope="col"><em>a</em></th>
+                <th scope="col"><em>b</em></th>
+                <th scope="col"><em>c</em></th>
+                <th scope="col"><em>d</em></th>
+                <th scope="col"><em>e</em></th>
+                <th scope="col"><em>f</em></th>
+                <th scope="col"><em>p</em></th>
               </tr>
             </thead>
             <tbody>
