--- a/notes/linear-algebra/affine-transformations.html
+++ b/notes/linear-algebra/affine-transformations.html
@@ -43,6 +43,9 @@
     </ol>
   </nav>
 
+  <br/>
+  <hr>
+
   <main>
     <article>
 
@@ -97,6 +100,10 @@
           on both theoretical understanding and implementation aspects.
         </p>
       </div>
+
+      <br/>
+      <hr/>
+
 
       <div>
         <h2 id="affine-transformations">Affine transformations</h2>
@@ -198,6 +205,9 @@
 
       </div>
 
+      <br/>
+      <hr/>
+
       <div>
         <h2 id="matrix-representation">Matrix representation of linear <br />transformations</h2>
 
@@ -297,6 +307,9 @@
         <!--
         <iframe scrolling="no" title="Affine transformations" src="https://www.geogebra.org/material/iframe/id/hgdbm5tx/width/765/height/445/border/888888/sfsb/true/smb/false/stb/false/stbh/false/ai/false/asb/false/sri/true/rc/false/ld/false/sdz/false/ctl/false" width="765px" height="445px" style="border:0px;" allowfullscreen> </iframe>-->
       </div>
+
+      <br/>
+      <hr/>
 
       <div>
         <h2 id="homogeneous-coordinates">Homogeneous coordinates</h2>
@@ -569,6 +582,9 @@
 
 
       </div>
+
+      <br/>
+      <hr/>
 
       <div>
 
@@ -1042,7 +1058,7 @@ function drawPoint() {
         <p>
           The probabilistic IFS can be used to generate not only the Barnsley fern, but also a wide variety of fractals.
           Two notable examples are the fractal tree and the Sierpiński triangle. The affine transformations needed to
-          construct these are listed in Tables \ref{tab:tree} and \ref{tab:triangle}.
+          construct these are listed in Tables 3 and 4.
         </p>
 
 
@@ -1202,8 +1218,8 @@ function drawPoint() {
       </div>
 
 
-
-
+      <br/>
+      <hr/>
 
 
 
