--- a/notes/linear-algebra/affine-transformations.html
+++ b/notes/linear-algebra/affine-transformations.html
@@ -1293,6 +1293,11 @@ function drawPoint() {
 
 
     </article>
+
+    <!-- Button to Top -->
+  <button onclick="topFunction()" id="toTop" title="Go to top"><i class="fa-solid fa-arrow-up"></i></button>
+
+
   </main>
 
   <script>
@@ -1330,6 +1335,41 @@ function drawPoint() {
       },
     }
 
+    /*---------------------------------------------------------------*/
+/* Button to the top */
+// Get the button
+
+let mybutton = document.getElementById("toTop");
+//let prevScrollpos = window.scrollY;
+
+window.onscroll = function () { scrollFunction() };
+
+// When the user scrolls down 500px from the top of the document, show the button
+function scrollFunction() {
+  //let currentScrollPos = window.scrollY;
+  //if (prevScrollpos > currentScrollPos) {
+  mybutton.style.display = "none";
+  //} else {
+  if (document.body.scrollTop > 500 || document.documentElement.scrollTop > 500) {
+    mybutton.style.display = "block";
+  }
+  //}
+  //prevScrollpos = currentScrollPos;
+}
+
+// When the user clicks on the button, scroll to the top of the document
+function topFunction() {
+  let tocLinks = document.querySelectorAll('.toc-chapter a');
+  tocLinks.forEach((link) => {
+    //link.classList.remove('active');
+    link.classList.remove('highlight');
+  });
+  document.body.scrollTop = 0;
+  document.documentElement.scrollTop = 0;
+}
+
+/*---------------------------------------------------------------*/
+
   </script>
 
   <!-- GeoGebra -->
@@ -1350,7 +1390,10 @@ function drawPoint() {
     window.addEventListener("load", () => {
       ggbApplet01.inject('ggb-element-01');
     });
+
+
   </script>
+
 
   <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
   <script async src="prism/prism.js"></script>
