--- a/notes/linear-algebra/affine-transformations.html
+++ b/notes/linear-algebra/affine-transformations.html
@@ -71,7 +71,8 @@
           <img src="imgs/affine-transformations/application-affine-satellite.png"
             loading="lazy" alt="Mountain landscape" width="500" />
           <figcaption>
-           Geometry correction for satellite images by S. Ban &amp; T. Kim (2024).
+           Geometry correction for satellite images by 
+           <a href="#ban-2024">S. Ban &amp; T. Kim (2024)</a>.
           </figcaption>
         </figure>
 
@@ -95,7 +96,8 @@
         </ul>
 
         <p>
-          We will explore their mathematical formulation, geometric properties, and some practical applications,
+          We will explore their mathematical formulation, 
+          geometric properties, and some practical applications,
           focusing
           on both theoretical understanding and implementation aspects.
         </p>
@@ -1329,7 +1331,7 @@ function drawPoint() {
   <script async src="prism/prism.js"></script>
 
   <script src="https://toolness.github.io/p5.js-widget/p5-widget.js"></script>
-  
+
   <script src="js/main.js"></script>
 
 </body>
